--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "flux": "^2.1.1",
+    "jquery": "^2.1.4",
+    "object-assign": "^4.0.1",
     "react": "^0.14.0",
+    "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.0"
   }
 }
