playing with react router

--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
   },
   "dependencies": {
     "flux": "^2.1.1",
+    "history": "^1.13.0",
     "object-assign": "^4.0.1",
     "react": "^0.14.0",
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.0",
+    "react-router": "^1.0.0",
     "reflux": "^0.3.0",
     "superagent": "^1.4.0"
   }
