--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register --require ./test/setup.js"
   },
   "repository": {
     "type": "git",
@@ -36,18 +37,30 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "eslint-plugin-react": "^3.6.2",
+    "expect": "^1.13.0",
+    "jsdom": "^7.0.2",
+    "mocha": "^2.3.3",
+    "react-addons-test-utils": "^0.14.2",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^2.1.5",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.1.19",
     "history": "^1.13.0",
+    "isomorphic-fetch": "^2.2.0",
     "lodash": "^3.10.1",
     "object-assign": "^4.0.1",
-    "react": "^0.14.0",
+    "react": "^0.14.2",
     "react-bootstrap": "^0.27.3",
-    "react-dom": "^0.14.0",
+    "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.0.4",
+    "redux-router": "^1.0.0-beta4",
+    "redux-thunk": "^1.0.0",
     "reflux": "^0.3.0",
     "superagent": "^1.4.0"
   }
