--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
+    "react-router": "^1.0.3",
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
-    "redux-router": "^1.0.0-beta4",
+    "redux-simple-router": "^2.0.3",
     "redux-thunk": "^1.0.0"
   }
 }
