--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.3",
+    "react-router": "^2.0.0-rc5",
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
     "redux-simple-router": "^2.0.3",
