--- a/package.json
+++ b/package.json
@@ -36,10 +36,14 @@
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^2.1.5",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-dev-server": "^1.12.1",
+    "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.1.19",
+    "body-parser": "^1.14.2",
+    "express": "^4.13.3",
     "history": "^1.13.0",
     "isomorphic-fetch": "^2.2.0",
     "lodash": "^3.10.1",
