--- a/package.json
+++ b/package.json
@@ -21,43 +21,43 @@
   "author": "Jonas Lergell",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.1",
-    "babel-plugin-transform-react-display-name": "^6.0.14",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
-    "eslint-plugin-react": "^3.6.2",
-    "expect": "^1.13.0",
-    "jsdom": "^7.0.2",
-    "mocha": "^2.3.3",
-    "react-addons-test-utils": "^0.14.2",
+    "babel-core": "^6.7.6",
+    "babel-eslint": "^6.0.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-react-display-name": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint-plugin-react": "^4.3.0",
+    "expect": "^1.16.0",
+    "jsdom": "^8.3.1",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^2.1.5",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-dev-server": "^1.12.1",
-    "webpack-hot-middleware": "^2.6.0"
+    "redux-devtools": "^3.2.0",
+    "webpack": "^1.12.15",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.1.19",
-    "body-parser": "^1.14.2",
-    "express": "^4.13.3",
-    "history": "^1.13.0",
-    "isomorphic-fetch": "^2.2.0",
-    "jsonwebtoken": "^5.5.4",
-    "jwt-decode": "^1.5.1",
-    "lodash": "^3.10.1",
+    "babel-polyfill": "^6.7.4",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "history": "^2.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^5.7.0",
+    "jwt-decode": "^2.0.1",
+    "lodash": "^4.11.1",
     "object-assign": "^4.0.1",
-    "react": "^0.14.2",
-    "react-bootstrap": "^0.28.2",
-    "react-dom": "^0.14.2",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.0.0-rc5",
-    "redux": "^3.0.4",
-    "redux-logger": "^2.0.4",
-    "redux-simple-router": "^2.0.3",
-    "redux-thunk": "^1.0.0"
+    "react": "^15.0.1",
+    "react-bootstrap": "^0.28.5",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.2.2",
+    "react-router-redux": "^4.0.2",
+    "redux": "^3.4.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1"
   }
 }
