--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.2.0",
+    "supertest": "^1.2.0",
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
